# OpenClaw_Backup

./: .gitignore  README.md  jobs.json  jobs.live.json
asset/font/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
cron/: INVENTORY.md  README.md  apply.sh  diff.sh  jobs.json  jobs.live.json
cron/drafts/: ai-news-daily-brief.md  evomap-daily-observatory.md  memory-daily-promote.md  memory-weekly-refine.md  mylocalrag-daily-ai-usage-report.md  (+6 more)
docs/: README.md
mcp/discord-beautifier/: .gitignore  ARCHITECTURE.md  DISCORD_MARKDOWN_GUIDE.md  EXTENSION_GUIDE.md  LICENSE  QUICK_START.md  README.md  mock_data.py  pyproject.toml  test_loop.py
mcp/discord-beautifier/examples/: claude-config.json  openclaw-config.json  usage.md
mcp/discord-beautifier/skills/: discord-news-digest.md  discord-news.md  discord-output.md  discord-task-report.md
mcp/discord-beautifier/src/: server.py  server.py.bak  utils.py
mcp/discord-beautifier/src/core/: base_formatter.py  registry.py
mcp/discord-beautifier/src/formatters/: __init__.py  detector.py  generic_formatter.py  json_formatter.py  markdown.py
mcp/discord-beautifier/src/formatters/adapters/: __init__.py  news_adapter.py  task_adapter.py
mcp/discord-beautifier/src/formatters/news/: __init__.py  news_formatter.py
mcp/discord-beautifier/src/formatters/task/: __init__.py  task_formatter.py
mcp/discord-beautifier/src/styles/: __init__.py  presets.py  presets.py.bak
scripts/: adopt.sh  ai-news-sources.json  fetch_rss_news.py  icon-to-base64.py  link.sh  render-messaging-config.sh  update-docs-readme.sh
(+16 files in other folders)
