[project]
name = "discord-beautifier"
version = "0.1.0"
description = "MCP server for formatting content as beautiful Discord embeds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools.build_meta"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
